--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<header>
 		<div class="checkIn">
 			<form class="signIn">
-				<p>
+				<!--<p>-->
         			<input type="text" id="login" name="login" placeholder=" Login">
         			<input type="password" name="password" id="password" placeholder=" Passworg">
 
-    			</p>
+    			<!--</p>-->
     		<button type="submit" name="submit">Login</button>
 			</form>
 		</div>
@@ -47,10 +47,62 @@
  	</div>
 	</nav>
 </header>
+<div id="burger-menu">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
+  <aside>
+    <div class="widget" id="sidebar">
+        <h3>Edit page</h3>
+  <div>
+<ul class="widget-list">
+    <li><label>Font Family: <select name="fontFamily" id="fontFamily">
+      <option>Arial</option>
+      <option>Cursive</option>
+      <option>Gabriola</option>
+      <option>Courier</option>
+    </select></label></li>
+
+      <li><label>Font Size: <input id="number" type="number" name="fontSize" min="8" max="24">px<br></li>
+
+    <li><label>Background color: <input type="color" name="color" id="color"></label><br></li>
+<button onclick="change()">Apply</button>
+    
+  </div>
+<button onclick='removeLastP()'>Delete last paragraph?</button>
+        <!--<ul class="widget-list">
+            <li><a href="">Nature</a></li>
+            <li><a href="">People</a></li>
+            <li><a href="">Buildings</a></li>
+        </ul>-->
+      </div>
+  </aside>
+
+
 
 
 
 	<div class="content">
+    <h2>Lorem ipsum dolor</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		<img src="img/les.jpg" alt="Forest">
 		<img src="img/2.jpg" alt="Boat">
 		<img src="img/3.jpg" alt="Bridge">
@@ -61,16 +113,7 @@
 	
 
 
-	<aside>
-		<div class="widget">
-    		<h3>Categories</h3>
-    		<ul class="widget-list">
-      			<li><a href="">Nature</a></li>
-      			<li><a href="">People</a></li>
-      			<li><a href="">Buildings</a></li>
-    		</ul>
-  		</div>
-	</aside>
+
 
 
 	
@@ -88,5 +131,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
